--- a/fluentd-ds.yaml
+++ b/fluentd-ds.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: fluentd-es
-        image: garland/kubernetes-fluentd-loggly:1.0
+        image: 
         command:
           - '/bin/sh'
           - '-c'
